--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,3 +1,23 @@
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <div class="card">
     <div class="card-header">
@@ -6,6 +26,8 @@
         </div>
         <div class="float-right">
             <button type="button" class="btn btn-primary" [routerLink]="['new']" routerLinkActive="router-link-active" >New Product</button>
+            <a color="accent" *ngIf="!authService.loggedIn()" routerLink="login" routerLinkActive="active">Login</a>
+            <a color="accent" *ngIf="authService.loggedIn()" (click)="authService.logoutUser()" routerLink="login" routerLinkActive="active">Logout</a>
         </div>
     </div>
     <div class="card-body">
@@ -14,24 +36,28 @@
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Name</th>
-                    <th scope="col"></th>
+                    <th scope="col">Details</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Description</th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let product of products">
                     <td> {{ product.id }} </td>
                     <td> {{ product.name }} </td>
+                    <td> R$ {{ product.price }} </td>
+                    <td> {{ product.description }} </td>
                     <td>
                         <span class="float-right">
-                            <button type="button" class="btn btn-outline-info mg-1 btn-sm">
+                            <!--<button type="button" class="btn btn-outline-info mg-1 btn-sm">
                                 Details
-                            </button>
+                            </button>-->
                             {{ ' ' }}
-                            <button class="btn btn-outline-warning btn-sm" (click)="onEdit(product.id)">
+                            <button class="btn btn-outline-warning btn-sm" data-toggle="modal" data-target="#exampleModal">
                                 Edit
                             </button>
                             {{ ' ' }}
-                            <button class="btn btn-outline-danger btn-sm">
+                            <button class="btn btn-outline-danger btn-sm" (click)="deleteProduct(product)">
                                 Delete
                             </button>
                         </span>
@@ -40,5 +66,4 @@
             </tbody>
         </table>
     </div>
-  </div>
-
+</div>
